err/async-connect.py.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/async_connect'...
Compiling './lib/python3.5/site-packages/async_connect/client.py'...
***   File "./lib/python3.5/site-packages/async_connect/client.py", line 126
    raise ValueError(f'The track "{entry[0]}" is not in the release\'s "{entry[1]}" track list.')
                                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/async_connect/http.py'...
***   File "./lib/python3.5/site-packages/async_connect/http.py", line 118
    with open(f'{path}/{filename}', 'wb') as file:
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/async_connect/release.py'...
***   File "./lib/python3.5/site-packages/async_connect/release.py", line 86
    return f'{self.artists} - {self.title}'
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/async_connect/track.py'...
***   File "./lib/python3.5/site-packages/async_connect/track.py", line 102
    return f'{self.artists} - {self.title}'
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/async_connect/utils.py'...
***   File "./lib/python3.5/site-packages/async_connect/utils.py", line 46
    return f'{self.RELEASE}/{release_id}/download?method=download&type={audio_format}'
                                                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/async_connect.py-0.1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test_get_all_catalog.py'...
***   File "./lib/python3.5/site-packages/tests/test_get_all_catalog.py", line 51
    print(f'There are {len(releases)} total releases.')
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
